# 3ds_dl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yaml
Include/: dlfcn.h
Source/: API.c  Allocator.c  ELF.hxx  ELFUtil.c  ELFUtil.h  Error.c  Error.cxx  Error.h  Error.hxx  Handle.c  Handle.cxx  Handle.h  Handle.hxx  Init.c  Init.h  Load.cxx  Loader.c  Loader.cxx  Loader.h  Loader.hxx  Relocs.c  Relocs.cxx  Relocs.h  Relocs.hxx  Stream.c  Stream.h  Symbol.c  Symbol.h  System.c  System.h  Unload.cxx  Wrappers.c  Wrappers.cxx
Tests/: CMakeLists.txt  Main.c  Makefile  Math.c  Path.c
Tests/source/: main.c
include/: dlfcn.h
internal/: allocator.h  elfutil.h  error.h  handle.h  loader.h  relocs.h
source/: ELF.hpp  Error.cpp  Error.hpp  Handle.cpp  Handle.hpp  Loader.cpp  Loader.hpp  Relocs.cpp  Relocs.hpp  Wrappers.cpp  allocator.c  error.c  handle.c  init.c  loader.c  luma.s  relocs.c  system.c  wrappers.c
test/object/: README.md  math.c
test/source/: main.c
